pod-security/templates/baseline/disallow-host-ports.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-ports
  annotations:
    policies.nirmata.com/title: Disallow hostPorts
    policies.nirmata.com/category: Pod Security Standards (Baseline)
    policies.nirmata.com/severity: medium
    policies.nirmata.com/subject: Pod
    kyverno.io/kyverno-version: 1.6.0
    kyverno.io/kubernetes-version: "1.22-1.23"
    policies.nirmata.com/description: >-
      Access to host ports allows potential snooping of network traffic and should not be
      allowed, or at minimum restricted to a known list. This policy ensures the `hostPort`
      field is unset or set to `0`.
spec:
  validationFailureAction: audit
  background: true
  rules:
  - name: host-ports
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: >-
        Use of host ports is disallowed. The fields spec.containers[*].ports[*].hostPort
        , spec.initContainers[*].ports[*].hostPort, and spec.ephemeralContainers[*].ports[*].hostPort
        must either be unset or set to `0`.
      pattern:
        spec:
          =(ephemeralContainers):
            - =(ports):
                - =(hostPort): 0
          =(initContainers):
            - =(ports):
                - =(hostPort): 0
          containers:
            - =(ports):
                - =(hostPort): 0
