pod-security/templates/baseline/disallow-privileged-containers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
  annotations:
    policies.nirmata.com/title: Disallow Privileged Containers
    policies.nirmata.com/category: Pod Security Standards (Baseline)
    policies.nirmata.com/severity: medium
    policies.nirmata.com/subject: Pod
    kyverno.io/kyverno-version: 1.6.0
    kyverno.io/kubernetes-version: "1.22-1.23"
    policies.nirmata.com/description: >-
      Privileged mode disables most security mechanisms and must not be allowed.
spec:
  validationFailureAction: audit
  background: true
  rules:
  - name: priviledged-containers
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: >-
        Privileged mode is disallowed. The fields spec.containers[*].securityContext.privileged
          and spec.initContainers[*].securityContext.privileged must be unset or set to `false`.
      pattern:
        spec:
          =(ephemeralContainers):
            - =(securityContext):
                =(privileged): "false"
          =(initContainers):
            - =(securityContext):
                =(privileged): "false"
          containers:
            - =(securityContext):
                =(privileged): "false"
